--- a/modelGeneration.yaml
+++ b/modelGeneration.yaml
@@ -10,10 +10,10 @@ Graph:
         #dataset: "/home/jkaradayi/projects/benchmark/processor/gen_graph_ts/mawi/mawi_stream.txt.weight.d"
         dataset: "/home/jkaradayi/projects/benchmark/processor/GTgen/taxi_deg_seq.txt"
         n: 30046 # TODO should be set by using dataset
-        numberOfAnomalies: 1
+        numberOfAnomalies: 3
         n_anomaly: 50 # TODO: voir si je trouve des valeurs qui font casser 
         m_anomaly: 500
-        N_switch: 1000 #300000 #40000000
+        N_switch: 182156980 #10000 #300000 #40000000
         #p: 20 # for ErdosRenyi
         #m: 149582 not used when dataset fixed
         #seq: [1,1,2,3,1] for HavelHakimi/EdgeSwitchingMarkovChain
